--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
+            <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
+
     <title>Privacy Policy - Fake News Detector</title>
     <style>
         body {
